# tango_ros

./: .gitignore  .gitmodules  README.md
RosApp/: README.md  tango_ros.rviz
RosApp/app/: build.gradle
RosApp/app/src/main/: AndroidManifest.xml
RosApp/app/src/main/jni/: Android.mk  jni.cc  jni_interface.cc  tango_helper.cc
RosApp/app/src/main/jni/include/: tango_helper.h
RosApp/app/src/main/jni/test/: run_test_script.sh  test_tango_ros_api.cc
RosApp/app/src/main/res/layout/: about_activity.xml  main_activity.xml  running_activity.xml  (+5 more)
RosApp/tango_ros_node/: build.gradle
RosApp/tango_ros_node/src/main/: AndroidManifest.xml
RosApp/tango_ros_node/src/main/jni/: jni.cc
TangoRosStreamer/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle  tango_ros.rviz
TangoRosStreamer/app/: build.gradle
TangoRosStreamer/app/src/main/: AndroidManifest.xml
TangoRosStreamer/app/src/main/java/eu/intermodalics/tango_ros_streamer/: AboutActivity.java  AppCompatRosActivity.java  ImuNode.java  MapChooserPreference.java  ParameterNode.java  RunAppOnStartupBroadcastReceiver.java  RunningActivity.java  SaveMapDialog.java  SaveMapServiceClientNode.java  SettingsActivity.java  TangoServiceClientNode.java
TangoRosStreamer/app/src/main/java/eu/intermodalics/tango_ros_streamer/activities/: AboutActivity.java  AppCompatPreferenceActivity.java  AppCompatRosActivity.java  RunningActivity.java  SettingsActivity.java
TangoRosStreamer/app/src/main/java/eu/intermodalics/tango_ros_streamer/android/: CustomSwitchPreference.java  LoadNavMapDialog.java  LoadOccupancyGridDialog.java  MapChooserPreference.java  RunAppOnStartupBroadcastReceiver.java  SaveMapDialog.java
TangoRosStreamer/app/src/main/java/eu/intermodalics/tango_ros_streamer/common/: NodeNamespaceHelper.java
TangoRosStreamer/app/src/main/java/eu/intermodalics/tango_ros_streamer/nodes/: ImuNode.java  ParameterNode.java
TangoRosStreamer/app/src/main/res/animator/: master_uri_text_animation.xml
TangoRosStreamer/app/src/main/res/layout/: about_activity.xml  custom_list_item.xml  dialog_load_nav_map.xml  dialog_load_occupancy_grid.xml  dialog_save_map.xml  running_activity.xml  settings_activity.xml
TangoRosStreamer/app/src/main/res/menu/: menu.xml
TangoRosStreamer/app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
TangoRosStreamer/app/src/main/res/xml/: pref_running.xml  pref_settings.xml
TangoRosStreamer/gradle/wrapper/: gradle-wrapper.properties
TangoRosStreamer/nodelet_manager/: build.gradle
TangoRosStreamer/nodelet_manager/src/main/: AndroidManifest.xml
TangoRosStreamer/nodelet_manager/src/main/java/eu/intermodalics/nodelet_manager/: NodeletManager.java  TangoInitializationHelper.java
TangoRosStreamer/nodelet_manager/src/main/jni/: Application.mk  jni.cc  plugin_generator.cc  tango_helper.cc
TangoRosStreamer/tango_nodelet_manager/src/main/java/eu/intermodalics/nodelet_manager/: TangoInitializationHelper.java  TangoNodeletManager.java
TangoRosStreamer/tango_nodelet_manager/src/main/jni/: Android.mk  jni.cc  plugin_generator.cc  tango_helper.cc
TangoRosStreamer/tango_ros_common/src/main/: AndroidManifest.xml
TangoRosStreamer/tango_ros_common/src/main/java/eu/intermodalics/tango_ros_common/: Logger.java
TangoRosStreamer/tango_ros_common/src/main/java/eu/intermodalics/tangoroscommon/: Logger.java  TangoServiceClientNode.java
TangoRosStreamer/tango_ros_node/: build.gradle
TangoRosStreamer/tango_ros_node/src/main/java/eu/intermodalics/tango_ros_node/: TangoInitializationHelper.java  TangoRosNode.java
TangoRosStreamer/tango_ros_node/src/main/java/org/ros/node/: NativeNodeMainBeta.java
TangoRosStreamer/tango_ros_node/src/main/jni/: Android.mk  jni.cc
TangoRosStreamer/tango_ros_node/src/main/jni/test/: test_tango_ros_api.cc
TangoRosStreamer/tango_ros_test/: build.gradle
TangoRosStreamer/tango_ros_test/src/main/: AndroidManifest.xml
TangoRosStreamer/tango_ros_test/src/main/jni/: Android.mk
TangoRosStreamer/tango_ros_test/src/main/jni/test/: run_test_script.sh  tango_ros_api_test.cc
TangoxRos/: README.md  gradle.properties  tango_ros.rviz
TangoxRos/app/: build.gradle
TangoxRos/app/src/main/: AndroidManifest.xml
TangoxRos/app/src/main/jni/: Android.mk  Application.mk  jni_interface.cc  tango_ros_node.cc  tango_ros_util.cc
tango_ros_android/: Android.mk
tango_ros_android/include/tango_ros_android/: tango_android_helper.h
tango_ros_android/src/: tango_android_helper.cpp
tango_ros_common/tango_ros_common/: build.gradle
tango_ros_common/tango_ros_common/src/main/: AndroidManifest.xml
tango_ros_common/tango_ros_java/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
tango_ros_common/tango_ros_java/gradle/wrapper/: gradle-wrapper.properties
tango_ros_common/tango_ros_java/tango_ros_node/: build.gradle
tango_ros_common/tango_ros_java/tango_ros_node/src/main/: AndroidManifest.xml
tango_ros_common/tango_ros_messages/: CMakeLists.txt  package.xml
tango_ros_common/tango_ros_messages/include/: README.txt
tango_ros_common/tango_ros_messages/srv/: GetMapName.srv  GetMapUuids.srv  LoadOccupancyGrid.srv  MapIO.srv  RequestPermission.srv  SaveMap.srv  TangoConnect.srv
tango_ros_common/tango_ros_native/: Android.mk  CMakeLists.txt  package.xml
tango_ros_common/tango_ros_native/cfg/: Publisher.cfg
tango_ros_common/tango_ros_native/include/tango_ros_native/: PublisherConfig.h  navigation_map_file_io.h  occupancy_grid_file_io.h  tango_3d_reconstruction_helper.h  tango_ros_conversion.h  tango_ros_conversions_helper.h  tango_ros_node.h  tango_ros_nodelet.h  tango_ros_util.h
tango_ros_common/tango_ros_native/src/: navigation_map_file_io.cpp  occupancy_grid_file_io.cpp  tango_3d_reconstruction_helper.cpp  tango_ros_conversion.cpp  tango_ros_conversions_helper.cpp  tango_ros_node.cpp  tango_ros_nodelet.cpp  tango_ros_util.cpp
tango_ros_common/tango_ros_native/test/: test_tango_ros_msg.cpp
tango_ros_common/tango_ros_native_RJ/: Android.mk  tango_ros_node_RJ.cpp
tango_ros_common/tango_ros_native_RJ/Include/: tango_ros_node_RJ_jni.h
(+72 files in other folders)
