<?xml version="1.0"?>
<package>
  <name>tango_ros_streamer</name>
  <version>1.0.13</version>
  <description>This package wraps Tango Ros Streamer application</description>

  <maintainer email="ruben@intermodalics.eu">Ruben Smits</maintainer>
  <maintainer email="perrine@intermodalics.eu">Perrine Aguiar</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>tango_ros_messages</build_depend>
  <build_depend>tango_ros_native</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tango_ros_messages</run_depend>
  <run_depend>tango_ros_native</run_depend>

</package>
