<?xml version="1.0"?>
<package>
  <name>tango_ros_messages</name>
  <version>2.0.0</version>
  <description>This package contains messages/services used by tango ros lib</description>

  <maintainer email="ruben@intermodalics.eu">Ruben Smits</maintainer>
  <maintainer email="perrine@intermodalics.eu">Perrine Aguiar</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
