<?xml version="1.0"?>
<package>
  <name>tango_ros_native</name>
  <version>0.0.0</version>
  <description>This package contains a cpp lib for using ros with tango</description>

  <maintainer email="ruben@intermodalics.eu">Ruben Smits</maintainer>
  <maintainer email="perrine@intermodalics.eu">Perrine Aguiar</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tango_3d_reconstruction</build_depend>
  <build_depend>tango_client_api</build_depend>
  <build_depend>tango_ros_messages</build_depend>
  <build_depend>tango_support</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tango_3d_reconstruction</run_depend>
  <run_depend>tango_client_api</run_depend>
  <run_depend>tango_ros_messages</run_depend>
  <run_depend>tango_support</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
